log/build_2025-06-13_01-04-47/servo_controller_pkg/stderr.log
  File "/home/quadplane/quadplane_ctrl_ws/install/servo_controller_pkg/lib/python3.12/site-packages/servo_controller_pkg/servo_commander.py", line 150
    #''''
        ^
SyntaxError: unterminated string literal (detected at line 150)

